--- a/MotivateMe/MotivateMe/Base.lproj/Main.storyboard
+++ b/MotivateMe/MotivateMe/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,39 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MotivateMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HvT-Qe-knB">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TOl-rL-DXp">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="TOl-rL-DXp" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ESY-DU-Lvz"/>
+                            <constraint firstItem="HvT-Qe-knB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="QRy-Ql-rII"/>
+                            <constraint firstAttribute="bottom" secondItem="TOl-rL-DXp" secondAttribute="bottom" id="U0g-bf-5qE"/>
+                            <constraint firstItem="HvT-Qe-knB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WkR-lB-AWe"/>
+                            <constraint firstItem="HvT-Qe-knB" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="XqG-VG-6Xb"/>
+                            <constraint firstItem="TOl-rL-DXp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="c5a-R7-w2o"/>
+                            <constraint firstAttribute="bottom" secondItem="HvT-Qe-knB" secondAttribute="bottom" id="ggg-oY-vR2"/>
+                            <constraint firstItem="TOl-rL-DXp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ngj-6M-IQp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="background" destination="HvT-Qe-knB" id="NUf-cu-lge"/>
+                        <outlet property="quote" destination="TOl-rL-DXp" id="yCX-E1-tiB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="99.776785714285708"/>
         </scene>
     </scenes>
 </document>
